--- a/chatfest-server/pom.xml
+++ b/chatfest-server/pom.xml
@@ -24,12 +24,17 @@
     </build>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.8.0-beta2</version>
+            <version>1.7.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
         <dependency>
             <groupId>com.innun</groupId>
             <artifactId>chatfest-common</artifactId>
