--- a/chatfest-client/pom.xml
+++ b/chatfest-client/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>chatfest-client</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.innun</groupId>
+            <artifactId>chatfest-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
