--- a/chatfest-common/pom.xml
+++ b/chatfest-common/pom.xml
@@ -17,6 +17,14 @@
             <version>1.2.54</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.esotericsoftware/kryo -->
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
