--- a/chatfest-client/pom.xml
+++ b/chatfest-client/pom.xml
@@ -12,11 +12,25 @@
     <artifactId>chatfest-client</artifactId>
 
     <dependencies>
+
         <dependency>
             <groupId>com.innun</groupId>
             <artifactId>chatfest-common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
     </dependencies>
 </project>
