--- a/chatfest-server/src/main/resources/log4j.properties
+++ b/chatfest-server/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.rootLogger=debug,stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+log4j.appender.stdout.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} %l%n%m%n
 # 将不想让其打印日志的库都设置为WARN，这些库只有WARN级别及以上的日志才会被打印
 log4j.category.org.springframework=WARN
 log4j.category.org.apache.http=WARN
